--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <meta name="google-site-verification" content="google83c6684aa50504e0" />
     <meta charset="UTF-8">
     <title>Data Structure Sim - Home</title>
     <style>
@@ -31,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>DS Visualizer</h1>
+    <h1>Data Structure & algorithm Visualizer</h1>
     <div class="tree-container">
         <svg>
             <line x1="200" y1="40" x2="90" y2="190" />
